--- a/.github/workflows/gki-kernel.yml
+++ b/.github/workflows/gki-kernel.yml
@@ -260,7 +260,7 @@ jobs:
             echo "Patch1"
             patch -p1 -F 3 < 0001-linux5.10.y-bore5.1.0.patch
             echo "Patch2"
-            patch -p1 -F 3 < 0002-constgran-vanilla-max-android-5.10.patch
+            patch -p1 -F 3 < 0002-constgran-vanilla-max-android.patch
           
           elif [[ "${{ inputs.kernel_version }}" == "5.15" && "${{ inputs.android_version }}" == "android14" && "${{ inputs.sub_level }}" < "144" ]]; then
             cp ../../kernel_patches/0001-linux5.15.y-bore5.1.0.patch ./
