--- a/.github/workflows/build-kernel-release.yml
+++ b/.github/workflows/build-kernel-release.yml
@@ -69,7 +69,6 @@ jobs:
     secrets: inherit
     with:
       runner: ${{ inputs.runner }}
-      lto_type: ${{ inputs.lto_type }}
       kernelsu_variant: ${{ inputs.kernelsu_variant }}
       kernelsu_branch: ${{ inputs.kernelsu_branch }}
       kernelsu_branch_other: ${{ inputs.kernelsu_branch_other }}
@@ -78,6 +77,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
         - build-kernel-a12-5-10
+        - build-kernel-wsa
     if: ${{ inputs.make_release }}
     env:
       REPO_OWNER: WildPlusKernel
