--- a/.github/workflows/gki-kernel.yml
+++ b/.github/workflows/gki-kernel.yml
@@ -185,17 +185,7 @@ jobs:
             curl -LSs "https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next/kernel/setup.sh" | bash $BRANCH
           elif [ "${{ inputs.kernelsu_variant }}" == "MKSU" ]; then
             echo "Adding KernelSU MKSU..."
-            curl -LSs "https://raw.githubusercontent.com/5ec1cff/KernelSU/main/kernel/setup.sh" | bash $BRANCH
-
-            # Revert commit of remove pts_unix98_lookup_pre
-            cd KernelSU
-            git revert -m 1 $(git log --grep="remove devpts hook" --pretty=format:"%h") -n
-            KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 12063)
-            echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
-            sed -i "s/DKSU_VERSION=16/DKSU_VERSION=${KSU_VERSION}/" kernel/Makefile
-          else
-            echo "Invalid KernelSU variant selected!"
-            exit 1
+            curl -LSs "https://raw.githubusercontent.com/ShirkNeko/KernelSU/susfs/kernel/setup.sh" | bash $BRANCH
           fi
 
       - name: Apply SUSFS Patches for KernelSU Variants
@@ -237,6 +227,8 @@ jobs:
           # Change to common directory and apply common SUSFS patch
           cd ../common
           patch -p1 < 50_add_susfs_in_gki-${{ inputs.android_version }}-${{ inputs.kernel_version }}.patch || true
+          cd ../KernelSU
+          patch -p1 < fix.patch
 
       - name: Apply Hide Stuff Patches
         run: |
