--- a/.github/workflows/kernel-a12-5.10.yml
+++ b/.github/workflows/kernel-a12-5.10.yml
@@ -6,12 +6,6 @@ permissions:
 on:
   workflow_call:  # This allows this workflow to be called from another workflow
     inputs:
-      runner:
-        required: true
-        type: string
-      lto_type:
-        required: true
-        type: string
       kernelsu_variant:
         required: true
         type: string
@@ -30,6 +24,7 @@ jobs:
         include:
         - sub_level: "198"
           os_patch_level: "2024-01"
+          revision: "r17"
     uses: ./.github/workflows/gki-kernel.yml
     secrets: inherit
     with:
@@ -37,8 +32,7 @@ jobs:
       kernel_version: "5.10"
       sub_level: ${{ matrix.sub_level }}
       os_patch_level: ${{ matrix.os_patch_level }}
-      runner: ${{ inputs.runner }}
-      lto_type: ${{ inputs.lto_type }}
+      revision: ${{ matrix.revision }}
       kernelsu_variant: ${{ inputs.kernelsu_variant }}
       kernelsu_branch: ${{ inputs.kernelsu_branch }}
       kernelsu_branch_other: ${{ inputs.kernelsu_branch_other }}
