--- a/.github/workflows/gki-kernel.yml
+++ b/.github/workflows/gki-kernel.yml
@@ -246,16 +246,16 @@ jobs:
           echo "Applying MKSU specific SUSFS patch..."
           cd ../KernelSU
           patch -p1 < mksu_susfs_fix.patch || true
-          chmod 777 mksu_susfs_vfs_fix.sh
-          ./mksu_susfs_vfs_fix.sh
+          ##chmod 777 mksu_susfs_vfs_fix.sh
+          ##./mksu_susfs_vfs_fix.sh
 
-      - name: Apply New Hooks Patches
-        run: |
-          echo "Changing to configuration directory: $CONFIG..."
-          cd "$CONFIG/common"
-          # Apply additional patch
-          cp ../../kernel_patches/new_hooks.patch ./
-          patch -p1 -F 3 < new_hooks.patch
+      #- name: Apply New Hooks Patches
+        #run: |
+          #echo "Changing to configuration directory: $CONFIG..."
+          #cd "$CONFIG/common"
+          ## Apply additional patch
+          #cp ../../kernel_patches/new_hooks.patch ./
+          #patch -p1 -F 3 < new_hooks.patch
           
       - name: Apply Hide Stuff Patches
         run: |
